--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,29 +1,25 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: Release
-
-
+name: Deploy
 on:
   push:
     branches:
-      - "*"
-
+      - main
 
 jobs:
-
-  slack:
-
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
 
+      - name: Run deployment process
+        run: exit 0
 
-      - uses: 8398a7/action-slack@v3
+      - name: Notify deployment
+        uses: 8398a7/action-slack@v3.8.0
         with:
           status: ${{ job.status }}
         env:
-          SLACK_WEBHOOK_URL: 'https://hooks.slack.com/services/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'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+          SLACK_WEBHOOK_URL: "https://hooks.slack.com/services/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"
+        if: always()
