--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,9 +15,7 @@ jobs:
 
       - name: Send custom JSON data to Slack workflow
         id: slack
-        uses: act10ns/slack@v1
-        with:
-          status: ${{ job.status }}
+        uses: slackapi/slack-github-action@v1.19.0
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
