--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,7 +11,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: slack-notification
-        uses: rtCamp/action-slack-notify@v2
+        uses: premisedata/slack-build-notifications@v1.0
+        if: always(
         env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
+          webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
 
