--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,4 +14,6 @@ jobs:
         uses: skarlso/slack-notification-action
         with:
           token: ${{ secrets.SLACK_BOT_TOKEN }}
+          message: "Running the release process... Current status is: :running:"
+          channel: "D03LE6V1CVB"
 
