--- a/.github/slack.yml
+++ b/.github/slack.yml
@@ -1,13 +1,13 @@
 username: GitHub-CI
-icon_url: https://octodex.github.com/images/mona-the-rivetertocat.png
+icon_url: https://octodex.github.com/images/femalecodertocat.png
 
-pretext: Triggered via {{eventName}} by {{actor}} {{or action "action"}} {{ref}} `{{diffRef}}`
+pretext: Triggered via {{eventName}} by {{actor}} {{default action "action"}} {{ref}} `{{diffRef}}`
 title: GitHub Actions
 title_link: https://support.github.com
 
-text: |
+text: &text |
   *<{{workflowRunUrl}}|Workflow _{{workflow}}_ job _{{jobName}}_ triggered by _{{eventName}}_ is _{{jobStatus}}_>* for <{{refUrl}}|`{{ref}}`>
-  {{#if description}}<{{diffUrl}}|`{{diffRef}}`> - {{description}}{{/if}}
+  {{#if description}}<{{diffUrl}}|`{{diffRef}}`> - {{{description}}}{{/if}}
   {{#if payload.commits}}
   *Commits*
   {{#each payload.commits}}
@@ -17,13 +17,12 @@ text: |
 
 fallback: |-
   [GitHub] {{workflow}} #{{runNumber}} {{jobName}} is {{jobStatus}}
-
 fields:
   - title: Job Steps
     value: "{{#each jobSteps}}{{icon this.outcome}} {{@key}}\n{{/each}}"
     short: false
   - title: Workflow
-    value: "<{{workflowUrl}}|{{workflow}}>"
+    value: "<{{{workflowUrl}}}|{{workflow}}>"
     short: true
   - title: Git Ref
     value: "{{ref}} ({{refType}})"
@@ -42,9 +41,72 @@ fields:
     value: "{{jobStatus}}"
     short: true
 
+blocks:
+  # author
+  - type: context
+    elements:
+      - type: image
+        image_url: '{{{sender.avatar_url}}}'
+        alt_text: '{{sender.login}}'
+      - type: mrkdwn
+        text: "*<{{sender.html_url}}|{{sender.login}}>*"
+
+  # title
+  - type: section
+    text:
+      type: mrkdwn
+      text: |
+        *<{{title_link}}|{{title}}>*
+  # text
+  - type: section
+    text:
+      type: mrkdwn
+      text: *text
+    accessory:
+      type: button
+      text:
+        type: plain_text
+        text: View
+      value: workflow_run_{{runId}}
+      url: '{{workflowRunUrl}}'
+      action_id: button-action
+
+  # fields
+  - type: section
+    fields:
+      - type: mrkdwn
+        text: |-
+          *Job Steps*
+          {{#each jobSteps}}{{#ifneq this.outcome 'skipped'}}{{icon this.outcome}}  {{@key}}
+          {{/ifneq}}{{/each}}
+  - type: section
+    fields:
+      - type: mrkdwn
+        text: "*Workflow*\n<{{{workflowUrl}}}|{{workflow}}>"
+      - type: mrkdwn
+        text: "*Git Ref*\n{{ref}} ({{refType}})"
+      - type: mrkdwn
+        text: |-
+          *Run ID*
+          <{{workflowRunUrl}}|{{runId}}>
+      - type: mrkdwn
+        text: "*Run Number*\n{{runNumber}}"
+      - type: mrkdwn
+        text: "*Actor*\n{{actor}}"
+      - type: mrkdwn
+        text: "*Job Status*\n{{jobStatus}}"
+
+  # footer
+  - type: context
+    elements:
+      - type: image
+        image_url: '{{footer_icon}}'
+        alt_text: github
+      - type: mrkdwn
+        text: '{{{footer}}} | <!date^{{ts}}^{date_short_pretty} at {time}|{{ts}}>'
+
 footer: >-
   <{{repositoryUrl}}|{{repositoryName}}> {{workflow}} #{{runNumber}}
-
 colors:
   success: '#5DADE2'
   failure: '#884EA0'
