--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,7 +18,7 @@ jobs:
         uses: act10ns/slack@v1
         with:
           status: ${{ job.status }}
-          config: .github/slack.yml
+          steps: ${{ toJson(steps) }}
           channel: '#cicd'
           message: Deployed {{ env.GITHUB_REF_NAME }} branch Successfully
         if: always()
