--- a/.github/slack.yml
+++ b/.github/slack.yml
@@ -1,13 +1,11 @@
-username: GitHub-CI
+username: Kubelancer
 icon_url: https://octodex.github.com/images/mona-the-rivetertocat.png
 
 pretext: Triggered via {{eventName}} by {{actor}} {{or action "action"}} {{ref}} `{{diffRef}}`
-title: GitHub Actions
-title_link: https://support.github.com
 
 text: |
-  *<{{workflowRunUrl}}|Workflow _{{workflow}}_ job _{{jobName}}_ triggered by _{{eventName}}_ is _{{jobStatus}}_>* for <{{refUrl}}|`{{ref}}`>
-  {{#if description}}<{{diffUrl}}|`{{diffRef}}`> - {{description}}{{/if}}
+  *Build status  is _{{jobStatus}}_>*
+
   {{#if payload.commits}}
   *Commits*
   {{#each payload.commits}}
