--- a/.github/slack.yml
+++ b/.github/slack.yml
@@ -4,7 +4,7 @@ icon_url: https://octodex.github.com/images/mona-the-rivetertocat.png
 pretext: Triggered via {{eventName}} by {{actor}} {{or action "action"}} {{ref}} `{{diffRef}}`
 
 text: |
-  *Build status  is _{{jobStatus}}_>*
+  *Build status  :  {{jobStatus}} *
 
   {{#if payload.commits}}
   *Commits*
@@ -20,6 +20,11 @@ fields:
   - title: Job Steps
     value: "{{#each jobSteps}}{{icon this.outcome}} {{@key}}\n{{/each}}"
     short: false
+
+  - title: Repo Name
+    value: <{{repositoryUrl}}|{{repositoryName}}>
+    short: false
+
   - title: Workflow
     value: "<{{workflowUrl}}|{{workflow}}>"
     short: true
@@ -44,9 +49,9 @@ footer: >-
   <{{repositoryUrl}}|{{repositoryName}}> {{workflow}} #{{runNumber}}
 
 colors:
-  success: '#5DADE2'
-  failure: '#884EA0'
-  cancelled: '#A569BD'
+  success: 'good'
+  failure: 'danger'
+  cancelled: 'warning'
   default: '#7D3C98'
 
 icons:
