--- a/.github/slack.yml
+++ b/.github/slack.yml
@@ -3,10 +3,16 @@ icon_url: https://octodex.github.com/images/mona-the-rivetertocat.png
 
 pretext: Triggered via {{eventName}} by {{actor}} {{or action "action"}} {{ref}} `{{diffRef}}`
 
+
 text: |
-  *Build and Deploy Status  :  {{jobStatus}} *
-
-
+  *<{{workflowRunUrl}}|Workflow _{{workflow}}_ job _{{jobName}}_ triggered by _{{eventName}}_ is _{{jobStatus}}_>* for <{{refUrl}}|`{{ref}}`>
+  {{#if description}}<{{diffUrl}}|`{{diffRef}}`> - {{description}}{{/if}}
+  {{#if payload.commits}}
+  *Commits*
+  {{#each payload.commits}}
+  <{{this.url}}|`{{truncate this.id 8}}`> - {{this.message}}
+  {{/each}}
+  {{/if}}
 
 fallback: |-
   [GitHub] {{workflow}} #{{runNumber}} {{jobName}} is {{jobStatus}}
@@ -20,9 +26,6 @@ fields:
     value: <{{repositoryUrl}}|{{repositoryName}}>
     short: false
 
-  - title: Commits
-    value: <{{this.url}}|`{{truncate this.id 8}}`> - {{this.message}}
-    short: false
 
   - title: Workflow
     value: "<{{workflowUrl}}|{{workflow}}>"
