--- a/.github/slack.yml
+++ b/.github/slack.yml
@@ -1,59 +1,62 @@
-username: Kubelancer
-icon_url: https://octodex.github.com/images/mona-the-rivetertocat.png
+username: GitHub-CI
+icon_url: https://octodex.github.com/images/femalecodertocat.png
 
-pretext: Triggered via {{eventName}} by {{actor}} {{or action "action"}} {{ref}} `{{diffRef}}`
-
-
-text: |
-  *<{{workflowRunUrl}}|Workflow _{{workflow}}_ job _{{jobName}}_ triggered by _{{eventName}}_ is _{{jobStatus}}_>* for <{{refUrl}}|`{{ref}}`>
-
-  {{#if payload.commits}}
-  *Commits*
-  {{#each payload.commits}}
-  <{{this.url}}|`{{truncate this.id 8}}`> - {{this.message}}
-  {{/each}}
-  {{/if}}
+pretext: Triggered via {{eventName}} by {{actor}} {{default action "action"}} {{ref}} `{{diffRef}}`
+title: GitHub Actions
+title_link: https://support.github.com
 
 fallback: |-
-  [GitHub] {{workflow}} #{{runNumber}} {{jobName}} is {{jobStatus}}
+  [GitHub] {{workflow}} #{{runNumber}} is {{jobStatus}}
+blocks:
+  # author
+  - type: context
+    elements:
+      - type: image
+        image_url: '{{{sender.avatar_url}}}'
+        alt_text: '{{sender.login}}'
+      - type: mrkdwn
+        text: "*<{{sender.html_url}}|{{sender.login}}>*"
 
+  # text
+  - type: section
+    text:
+      type: mrkdwn
+      text: >-
+        Workflow {{payload.workflow.name}} {{payload.workflow_run.status}}
+        with {{payload.workflow_run.conclusion}} after
+        {{pluralize payload.workflow_run.run_attempt 'attempt'}}
+    accessory:
+      type: button
+      text:
+        type: plain_text
+        text: View
+      value: workflow_run_{{payload.workflow_run.workflow_id}}
+      url: '{{payload.workflow_run.html_url}}'
+      action_id: button-action
 
+  # fields
+  - type: section
+    fields:
+      - type: mrkdwn
+        text: "*Jobs*\n{{payload.workflow_run.jobs_url}}"
+      - type: mrkdwn
+        text: "*Logs*\n{{payload.workflow_run.logs_url}}"
 
-fields:
-  - title: Job Steps
-    value: "{{#each jobSteps}}{{icon this.outcome}} {{@key}}\n{{/each}}"
-    short: false
-  - title: Repo Name
-    value: <{{repositoryUrl}}|{{repositoryName}}>
-    short: false
-  - title: Workflow
-    value: "<{{workflowUrl}}|{{workflow}}>"
-    short: true
-  - title: Git Ref
-    value: "{{ref}} ({{refType}})"
-    short: true
-  - title: Run ID
-    value: |-
-      <{{workflowRunUrl}}|{{runId}}>
-    short: true
-  - title: Run Number
-    value: "{{runNumber}}"
-    short: true
-  - title: Actor
-    value: "{{actor}}"
-    short: true
-  - title: Job Status
-    value: "{{jobStatus}}"
-    short: true
-
+  # footer
+  - type: context
+    elements:
+      - type: image
+        image_url: '{{footer_icon}}'
+        alt_text: github
+      - type: mrkdwn
+        text: '{{{footer}}} | <!date^{{ts}}^{date_short_pretty} at {time}|{{ts}}>'
 
 footer: >-
   <{{repositoryUrl}}|{{repositoryName}}> {{workflow}} #{{runNumber}}
-
 colors:
-  success: 'good'
-  failure: 'danger'
-  cancelled: 'warning'
+  success: '#5DADE2'
+  failure: '#884EA0'
+  cancelled: '#A569BD'
   default: '#7D3C98'
 
 icons:
